Создано с помощью Colaboratory

--- a/Employee_promotion.ipynb
+++ b/Employee_promotion.ipynb
@@ -15,7 +15,9 @@
         "2-iJaRQBrQtQ",
         "WxyGPNsltYg2",
         "7zdQbCRsxJpV"
-      ]
+      ],
+      "authorship_tag": "ABX9TyOQU8AC2KznhGU1pZ0r1m7F",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -26,6 +28,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/tarasov001/ml/blob/main/Employee_promotion.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
