Создано с помощью Colaboratory

--- a/Employee_promotion.ipynb
+++ b/Employee_promotion.ipynb
@@ -20,7 +20,7 @@
         "CriYOEfxoizo",
         "XFrYvps4_1Pc"
       ],
-      "authorship_tag": "ABX9TyMjQmgA3nWA0e0j1J3lEQhF",
+      "authorship_tag": "ABX9TyOZ3ux4csAM6KOH0PiuFP6w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2270,7 +2270,7 @@
       },
       "source": [
         "На нашей модели изменение параметра К не дает сильной разница в качетсве предсказания.\\\n",
-        "Все модели показали неплохие результаты с ошибкой на тестовой выборке приблизительно 7%.\n",
+        "Все модели показали неплохие результаты с ошибкой на тестовой выборке приблизительно 8%.\n",
         "Разницы в тренировочных и тестовых ошиках небольшие, поэтому можно сделать вывод, что наша модель не переобучена."
       ]
     },
@@ -2918,13 +2918,31 @@
         "id": "wVWhq8Zo7U4D"
       },
       "source": [
-        "Мы смогли снизить размерность на 10 признаков и увеличить ошибку предсказания приблизительно на 0.4%."
+        "Мы смогли снизить размерность на 10 признаков, но при этом увеличилась ошибка предсказания приблизительно на 0.4%."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pjRZlvsXhn-g"
+      },
+      "source": [
+        "# 9. Вывод"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NoQ4IrySi173"
+      },
+      "source": [
+        "В результате проведенной мною работы, я создал несколько моделей машинного обучения для отбора кандидатов на повышение в должности. Мною использовались два алгоритма: KNeighborsClassifier и RandomForestClassifier. Для обработки категориальных признаков я выбрал подходы One-Hot Encoding и Ordinal Encoding. Среди рассмотренных мною параметров К для обучения модели алгоритмом KNeighborsClassifier, наилучший результат на тестовой выборке - 7,85% был достигнут при K = 5. Но стоит отметить, что он не сильно отличается от остальных, лучше приблизительно на 0,1%. Модель, обученная алгоритмом RandomForestClassifier показала более хороший результат чем предыдущая - 6,24%, приблизительно на 1,6% до снижения размерности данных и 1,2% после. На основе полученных мною результатов, я могу сделать вывод, что при выявлении кандидатов на повышение в должности из рассмотренных алгоритмов машинного обучения более точные предсказания дает - RandomForestClassifier."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vGZ1aaY_-wad"
+        "id": "eMGP2IE7m_9a"
       },
       "source": [
         ""
